ch10/ch10-start/config-macro-usage/tests/fails/missing_equals.stderr
error: expected equals sign after path
 --> tests/fails/missing_equals.rs:3:14
  |
3 | config!(path "stuff");
  |              ^^^^^^^
